Added one more prjoect i.e What-todo

--- a/src/components/contact/Contact.module.css
+++ b/src/components/contact/Contact.module.css
@@ -61,6 +61,8 @@
     }
     .links{
         align-self: center;
-        gap: 21px;
+        gap: 15px;
+        font-size: 15px;
+        letter-spacing: 1;
     }
 }
